<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    tools:context=".signup">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h2"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/head1"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/head1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/h1"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/tEmailid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:autoSizeTextType="uniform"
        android:inputType="text"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:hint="@string/ei"
        android:layout_below="@id/namel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/namef"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:inputType="text"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:autoSizeTextType="uniform"
        android:hint="@string/fn"
        android:layout_below="@id/head"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/namel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:inputType="text"
        android:textColor="@color/teal_200"
        android:autoSizeTextType="uniform"
        android:textStyle="bold"
        android:hint="@string/ln"
        android:layout_below="@id/namef"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:autoSizeTextType="uniform"
        android:hint="@string/passw"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_below="@id/tEmailid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>